...
        ),
      ),
      body: _getBody(isFormValid),
      floatingActionButton: Padding(
        padding: const EdgeInsets.symmetric(horizontal: 16),
        child: ButtonComponent(
          key: const ValueKey("verifyPasswordButton"),
          label: context.strings.verifyPassword,
          isDisabled: !isFormValid,
          onTap: isFormValid ? _verifyPassword : null,
        ),
      ),
      floatingActionButtonLocation: FloatingActionButtonLocation.centerFloat,
...
                    textInputAction: TextInputAction.next,
                  ),
                ),
                Padding(
                  padding: const EdgeInsets.fromLTRB(16, 24, 16, 0),
                  child: TextInputComponent(
                    key: const ValueKey("passwordInputField"),
                    controller: _passwordController,
                    hintText: context.strings.enterYourPassword,
                    autofocus: true,
                    autocorrect: false,
                    isPasswordInput: true,
                    keyboardType: TextInputType.visiblePassword,
...
