...
        centerTitle: true,
      ),
      body: _getBody(),
      floatingActionButton: Padding(
        padding: const EdgeInsets.symmetric(horizontal: 16),
        child: ButtonComponent(
          key: const ValueKey("logInButton"),
          label: context.strings.continueLabel,
          isDisabled: !_emailIsValid,
          onTap: _emailIsValid ? _submitLoginEmail : null,
        ),
      ),
      bottomNavigationBar: isKeyboardOpen ? null : _getSignUpPrompt(),
...
